Fix line wrapping for chats and people lists

--- a/src/components/Pages/AllChats/AllChats.scss
+++ b/src/components/Pages/AllChats/AllChats.scss
@@ -16,8 +16,8 @@
         column-gap   : 0.5em;
         flex-grow    : 1;
         row-gap      : 0.5em;
-        height       : 3em;
-        padding      : 0 1em;
+        min-height   : 3em;
+        padding      : 0.3em 1em;
         color        : black;
         border-radius: 5px;
 
