--- a/src/components/Pages/AllVideoRooms/AllVideoRooms.scss
+++ b/src/components/Pages/AllVideoRooms/AllVideoRooms.scss
@@ -13,8 +13,8 @@
         column-gap   : 1em;
         row-gap      : 0.5em;
         align-items  : center;
-        height       : 3em;
-        padding      : 0 1em;
+        min-height   : 3em;
+        padding      : 0.3em 1em;
         color        : black;
         border-radius: 5px;
 
